# t2s-training-pipeline

./: .gitignore  DEFINITIONS.md  README.md
configs/: fastpitch_single_speaker_8gb.yaml  hifigan_small_8gb.yaml
data/: README.md  list_audio_devices.py  metadata.csv  pyproject.toml  record_sentences.py  sentences_en.txt  sentences_es.txt
nemo/: README.md  main.py  nemo_train.py  pyproject.toml
vyvo/: README.md  main.py  precompute_snac.py  pyproject.toml  vyvo_finetune.py  vyvo_infer.py
