[project]
name = "nemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython>=3.1.3",
    "nemo-toolkit>=1.23.0",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.5.3",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]
